fix: contract processing