@@ -1,5 +1,6 @@
 package blue.contract;
 
+import blue.contract.debug.DebugContext;
 import blue.contract.exception.ContractProcessingException;
 import blue.contract.model.*;
 import blue.contract.model.event.WorkflowInstanceStartedEvent;
@@ -19,21 +20,25 @@ import java.util.stream.Collectors;
 import static blue.contract.Properties.CONTRACT_INITIALIZATION_EVENT_BLUE_ID;
 
 public class SingleEventContractProcessor {
-
-    private StepProcessorProvider stepProcessorProvider;
-    private WorkflowProcessor workflowProcessor;
-    private Blue blue;
-    private ContractProcessorConfig contractProcessorConfig;
+    private final StepProcessorProvider stepProcessorProvider;
+    private final WorkflowProcessor workflowProcessor;
+    private final Blue blue;
+    private final ContractProcessorConfig contractProcessorConfig;
+    private final DebugContext debugContext;
 
     public SingleEventContractProcessor(StepProcessorProvider stepProcessorProvider, Blue blue) {
-        this.blue = blue;
-        this.stepProcessorProvider = stepProcessorProvider;
-        this.workflowProcessor = new WorkflowProcessor(stepProcessorProvider);
-        this.contractProcessorConfig = new ContractProcessorConfig();
+        this(stepProcessorProvider, blue, new DebugContext(false));
     }
 
-    public ContractUpdateAction initiate(Node contract,
-                                         String initiateContractEntryBlueId, String initiateContractProcessingEntryBlueId) {
+    public SingleEventContractProcessor(StepProcessorProvider stepProcessorProvider, Blue blue, DebugContext debugContext) {
+        this.blue = blue;
+        this.stepProcessorProvider = stepProcessorProvider;
+        this.workflowProcessor = new WorkflowProcessor(stepProcessorProvider, debugContext);
+        this.contractProcessorConfig = new ContractProcessorConfig();
+        this.debugContext = debugContext;
+    }
+
+    public ContractUpdateAction initiate(Node contract, String initiateContractEntryBlueId, String initiateContractProcessingEntryBlueId) {
         return initiate(contract, null, initiateContractEntryBlueId, initiateContractProcessingEntryBlueId);
     }
 
@@ -45,6 +50,7 @@ public class SingleEventContractProcessor {
     public ContractUpdateAction initiate(Node contract, ContractProcessingContext initiatedContext,
                                          String initiateContractEntryBlueId, String initiateContractProcessingEntryBlueId) {
         Node event = initializationEvent();
+
         Node preprocessedContractNode = preprocess(contract);
         GenericContract preprocessedContract = blue.nodeToObject(preprocessedContractNode, GenericContract.class);
 
@@ -69,16 +75,22 @@ public class SingleEventContractProcessor {
                         .config(contractProcessorConfig)
                         .incomingEvent(event);
 
+        debugContext.startContractProcessing(event, contract);
+
         List<WorkflowInstance> workflowInstances = processWorkflows(event, context, 0);
         int startedWorkflowInstancesCount = workflowInstances.size();
         workflowInstances.removeIf(WorkflowInstance::isCompleted);
+
+        // Collect local contract instances excluding the root instance
+        List<ContractInstance> localContractInstances = context.getContractInstances().stream()
+                .filter(instance -> instance.getId() != Constants.ROOT_INSTANCE_ID)
+                .collect(Collectors.toList());
 
         rootInstance.getProcessingState()
                 .startedWorkflowsCount(startedWorkflowInstancesCount)
                 .workflowInstances(workflowInstances.isEmpty() ? null : workflowInstances)
                 .startedLocalContractsCount(context.getStartedLocalContracts())
-                .localContractInstances(context.getContractInstances().size() > 1 ?
-                        context.getContractInstances().subList(1, context.getContractInstances().size()) : null)
+                .localContractInstances(localContractInstances.isEmpty() ? null : new ArrayList<>(localContractInstances))
                 .completed(context.isCompleted())
                 .terminatedWithError(context.isTerminatedWithError());
 
@@ -100,17 +112,14 @@ public class SingleEventContractProcessor {
                 .addPath("/modules/*/*")
                 .build();
         blue.extend(contract, contractLimits);
-
         return blue.resolve(contract);
     }
 
     public ContractUpdateAction processEvent(Node event, ContractInstance contractInstance,
                                              String initiateContractEntryBlueId, String initiateContractProcessingEntryBlueId) {
-
         if (contractInstance.getProcessingState().isCompleted() || contractInstance.getProcessingState().isTerminatedWithError()) {
             throw new IllegalStateException("Contract instance is already completed or terminated with error.");
         }
-
         contractInstance = blue.clone(contractInstance);
         int initialStartedLocalContracts = contractInstance.getProcessingState().getStartedLocalContractCount();
         String previousContractInstanceBlueId = calculateBlueId(contractInstance);
@@ -121,7 +130,7 @@ public class SingleEventContractProcessor {
             localContractIds = localContractInstances.stream()
                     .map(ContractInstance::getId)
                     .sorted()
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         ContractProcessingContext context = new ContractProcessingContext()
@@ -136,6 +145,8 @@ public class SingleEventContractProcessor {
                 .config(contractProcessorConfig)
                 .incomingEvent(event);
 
+        debugContext.startContractProcessing(event, blue.objectToNode(contractInstance.getContractState()));
+
         processEventInContractInstance(event, contractInstance, context);
 
         for (int id : localContractIds) {
@@ -148,12 +159,12 @@ public class SingleEventContractProcessor {
         }
 
         List<ContractInstance> processedLocalInstances = context.getContractInstances().stream()
-                .filter(instance -> instance.getId() != 0)
+                .filter(instance -> instance.getId() != Constants.ROOT_INSTANCE_ID)
                 .collect(Collectors.toList());
 
         contractInstance.getProcessingState()
                 .startedLocalContractsCount(context.getStartedLocalContracts())
-                .localContractInstances(processedLocalInstances);
+                .localContractInstances(processedLocalInstances.isEmpty() ? null : new ArrayList<>(processedLocalInstances));
 
         return new ContractUpdateAction()
                 .contractInstance(contractInstance)
@@ -174,8 +185,12 @@ public class SingleEventContractProcessor {
         List<WorkflowInstance> newWorkflowInstances = processWorkflows(event, context, startedWorkflows);
         addWorkflowInstanceStartedEvents(newWorkflowInstances, context);
         startedWorkflows += newWorkflowInstances.size();
+
         if (existingWorkflowInstances != null) {
-            existingWorkflowInstances.forEach(workflowInstance -> workflowProcessor.processEvent(event, workflowInstance, context));
+            for (WorkflowInstance workflowInstance : existingWorkflowInstances) {
+                debugContext.startWorkflowProcessing(workflowInstance.getWorkflow().getName(), workflowInstance.getStepResults());
+                workflowProcessor.processEvent(event, workflowInstance, context);
+            }
         }
 
         List<WorkflowInstance> updatedWorkflowInstances = new ArrayList<>();
@@ -195,27 +210,23 @@ public class SingleEventContractProcessor {
 
     private List<WorkflowInstance> processWorkflows(Node event, ContractProcessingContext context, int initialStartedWorkflows) {
         List<Workflow> workflows = context.getContract().getWorkflows();
-        if (workflows == null)
-            return new ArrayList<>();
-
+        if (workflows == null) return new ArrayList<>();
         AtomicInteger currentId = new AtomicInteger(initialStartedWorkflows);
         List<WorkflowInstance> processedWorkflows = new ArrayList<>();
-
         for (Workflow workflow : workflows) {
             try {
                 // TODO: convert
+                debugContext.startWorkflowProcessing(workflow.getName());
                 Optional<WorkflowInstance> result = workflowProcessor.processEvent(event, blue.objectToNode(workflow), context);
                 if (result.isPresent()) {
                     result.get().id(currentId.getAndIncrement());
                     processedWorkflows.add(result.get());
-                    if (context.isCompleted())
-                        return processedWorkflows;
+                    if (context.isCompleted()) return processedWorkflows;
                 }
             } catch (ContractProcessingException e) {
                 break;
             }
         }
-
         return processedWorkflows;
     }
 
@@ -227,7 +238,6 @@ public class SingleEventContractProcessor {
                     .currentStepName(workflowInstance.getCurrentStepName())
                     .initiateContractEntry(context.getInitiateContractEntryBlueId())
                     .initiateContractProcessingEntry(context.getInitiateContractProcessingEntryBlueId());
-
             Node eventNode = blue.objectToNode(event);
             context.getEmittedEvents().add(eventNode);
         }
